--- a/Makefile.linux
+++ b/Makefile.linux
@@ -3,9 +3,9 @@ PLAT = _linux
 CC        = gcc
 CFLAGS    = -O3 -ansi
 #BLASLIB   = ./CLAPACK/lsblaspii1.2f_03.00.a
-BLASLIB   = ./CLAPACK/blas$(PLAT).a
-LAPACKLIB = ./CLAPACK/lapack$(PLAT).a
-F2CLIB    = ./CLAPACK/F2CLIBS/libF77$(PLAT).a ./CLAPACK/F2CLIBS/libI77$(PLAT).a
+BLASLIB   = -lblas
+LAPACKLIB = -llapack
+F2CLIB    = -lgfortran
 LIBS      = $(LAPACKLIB) $(BLASLIB) $(F2CLIB) -lm
 OBJS      = ica.o interfc.o r250.o randlcg.o dsum.o
 
